# sneaker_AI_Ver2

./: .gitignore
backend/: .env.example  alembic.ini  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  sole_matrix.db  sole_matrix.db-shm  sole_matrix.db-wal
backend/alembic/: env.py
backend/alembic/versions/: 20260408_0001_core_data.py  20260408_0002_user_assets.py  20260409_0003_notifications.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  router.py
backend/app/api/routers/: __init__.py  admin_ops.py  alerts.py  auth.py  closet.py  health.py  image_analysis.py  instagram.py  (+9 more)
backend/app/core/: __init__.py  settings.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/integrations/: __init__.py  gemini_client.py  instagram_client.py
backend/app/models/: __init__.py  closet.py  market.py  notification_event.py  price_alert.py  sneaker.py  stock.py  wishlist.py
backend/app/schemas/: __init__.py  admin_ops.py  alerts_delivery.py  auth.py  core_data.py  health.py  image_analysis.py  instagram.py  intelligence.py  search_grounding.py  user_assets.py
backend/app/services/: admin_ops.py  alert_scheduler.py  image_analysis.py  intelligence.py  search_grounding.py  social_trends.py
backend/tests/: test_admin_ops.py  test_alert_scheduler.py  test_auth.py  test_core_data.py  test_health.py  test_image_analysis_integration.py  test_instagram_trends_integration.py  test_intelligence.py  test_phase8_hardening.py  test_search_grounding_integration.py  test_settings_env_loading.py  test_user_assets.py
(+54 files in other folders)
