[project]
name = "sole-matrix-backend"
version = "0.1.0"
description = "SOLE//MATRIX backend scaffold for Phase 1"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.135.3",
  "uvicorn[standard]==0.37.0",
  "pydantic==2.12.5",
  "pydantic-settings==2.11.0",
  "PyJWT==2.10.1",
  "SQLAlchemy==2.0.49",
  "aiosqlite==0.21.0",
  "alembic==1.17.1",
  "APScheduler==3.11.2",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pytest==8.4.2",
  "ruff==0.13.2",
  "mypy==1.18.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = ["apscheduler.*"]
ignore_missing_imports = true
